--- a/components/home.html
+++ b/components/home.html
@@ -99,7 +99,7 @@
                                 <md-list-item ng-show="homeCtrl.isAdmin" ng-click="viewTracking('home')" class="font-smal"><p>{{lang.tracking | uppercase}}</p><img
                                         src="img/icons/menu/tracking-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
-                                <md-list-item class="font-smal" ng-click="viewVersions()" ng-show="false"><p>
+                                <md-list-item class="font-smal" ng-click="viewVersions()" ng-show="true"><p>
                                     {{lang.versions | uppercase}}</p><img
                                         src="img/icons/menu/version-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
