--- a/components/legend-dialog.html
+++ b/components/legend-dialog.html
@@ -65,7 +65,8 @@
                     <td md-cell>{{lang.low_battery_tag_description}}</td>
                 </tr>
                 <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
-                    <td md-cell class="padding-10-px"><img src="./img/icons/out_of_location_legend.png" alt="" title=""></td>
+                    <td class="padding-10-px" md-cell><img alt="" src="./img/icons/tags/tag_out_of_location_legend.png"
+                                                           title=""></td>
                     <td md-cell>{{lang.out_location_tag_meaning}}</td>
                     <td md-cell>{{lang.out_location_tag_description}}</td>
                 </tr>
@@ -145,12 +146,14 @@
                     <td md-cell>{{lang.alarm_tags_description}}</td>
                 </tr>
                 <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
-                    <td md-cell class="padding-10-px"><img src="./img/icons/tags/online_legend_anchor.png" alt="" title=""></td>
+                    <td class="padding-10-px" md-cell><img alt="" src="./img/icons/tags/anchor_online_legend.png"
+                                                           title=""></td>
                     <td md-cell>{{lang.online_anchor_meaning}}</td>
                     <td md-cell>{{lang.online_anchor_description}}</td>
                 </tr>
                 <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
-                    <td md-cell class="padding-10-px"><img src="./img/icons/tags/offline_legend_anchor.png" alt="" title=""></td>
+                    <td class="padding-10-px" md-cell><img alt="" src="./img/icons/tags/anchor_offline_legend.png"
+                                                           title=""></td>
                     <td md-cell>{{lang.offline_anchor_meaning}}</td>
                     <td md-cell>{{lang.offline_anchor_description}}</td>
                 </tr>
@@ -160,7 +163,8 @@
                     <td md-cell>{{lang.indoor_location_description}}</td>
                 </tr>
                 <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
-                    <td md-cell class="padding-10-px"><img src="./img/icons/markers/mountain.png" alt="" title=""></td>
+                    <td class="padding-10-px" md-cell><img alt="" src="./img/icons/markers/outdoor-location.png"
+                                                           title=""></td>
                     <td md-cell>{{lang.outdoor_location_meaning}}</td>
                     <td md-cell>{{lang.outdoor_location_description}}</td>
                 </tr>
