--- a/components/login.html
+++ b/components/login.html
@@ -75,10 +75,9 @@
             </div>
             <div class="font-smal margin-lr-auto cursor-pointer background-transparent-white padding-10-px position-fixed bottom-0 left-10 width-80">
                 <p class="text-bold font-large text-center color-black">La vostra sicurezza è la nostra priorità</p>
-                <p class="text-center text-bold margin-none">Oggi nel mondo ogni 15 secondi, 1 lavoratore muore e 153 lavoratori hanno un incidente sul lavoro,
-                    (fonte ILO, Organizzazione internazionale del lavoro). Nonostante l’adeguamento delle normative e delle leggi a tutela della sicurezza sul
-                    posto di lavoro, la salvaguardia delle risorse umane rimane uno dei primari problemi irrisolti del mondo industriale contemporaneo, una delle
-                    principali scommesse da indirizzare per l’utilizzo e il reale successo di nuovi scenari produttivi e logistici della quarta rivoluzione industriale.</p>
+                <p class="text-center text-bold margin-none">Oggi nel mondo ogni 15 secondi, 1 lavoratore muore e 153
+                    lavoratori hanno un incidente sul lavoro,
+                    (fonte ILO, Organizzazione internazionale del lavoro).</p>
             </div>
 
         </div>
