--- a/components/versions.html
+++ b/components/versions.html
@@ -204,15 +204,37 @@
                         <span class="color-green text-bold">UPDATES</span>: Inserita la scritta "nessuna location" anche per gli allarmi che sono fuori da ogni location<br>
                         <span class="color-green text-bold">UPDATES</span>: Eliminato il secondo socket e serializzato tutto su un socket solo creando un pool di richieste<br>
                         <span class="color-green text-bold">UPDATES</span>: Implementato il messaggio di successo/errore quando viene salvato un disegno<br>
-                        <span class="color-green text-bold">UPDATES</span>: Implementata la visualizzazione del numero di tag e ancore in una location nella home attraverso icone invece che scritte<br>
-                        <span class="color-green text-bold">UPDATES</span>: Implementato il zoom in/out dell'icona allarmi e migliorata la visualizzazione di tutti i pulsanti in alto a destra<br>
-                        <span class="color-green text-bold">UPDATES</span>: Migliorata la visualizzazione dei grafici e delle informazioni sui tag e ancore in alto a destra<br>
+                        <span class="color-green text-bold">UPDATES</span>: Implementata la visualizzazione del numero
+                        di tag e ancore in una location nella home attraverso icone invece che scritte<br>
+                        <span class="color-green text-bold">UPDATES</span>: Implementato il zoom in/out dell'icona
+                        allarmi e migliorata la visualizzazione di tutti i pulsanti in alto a destra<br>
+                        <span class="color-green text-bold">UPDATES</span>: Migliorata la visualizzazione dei grafici e
+                        delle informazioni sui tag e ancore in alto a destra<br>
                         <span class="color-green text-bold"></span><br>
-                        <span class="color-red text-bold">BUG FIX</span>: Quando c'era un allarme in una location alternavo l'icona di default invece di alternare l'icona che la location aveva in quel momento<br>
-                        <span class="color-red text-bold">BUG FIX</span>: Aggiustato il pulsante back che quando veniva sciacciato i una location raggiunta attraverso la finestra degli allarmi, dava errore<br>
-                        <span class="color-red text-bold">BUG FIX</span>: Risolto il problema per cui se clickavi su un tag sopra un alarme ti faceva vedere tutte e due( il problema era che si mone ha cambiato la dimensione dei tag ma non delle ancore)<br>
+                        <span class="color-red text-bold">BUG FIX</span>: Quando c'era un allarme in una location
+                        alternavo l'icona di default invece di alternare l'icona che la location aveva in quel
+                        momento<br>
+                        <span class="color-red text-bold">BUG FIX</span>: Aggiustato il pulsante back che quando veniva
+                        sciacciato i una location raggiunta attraverso la finestra degli allarmi, dava errore<br>
+                        <span class="color-red text-bold">BUG FIX</span>: Risolto il problema per cui se clickavi su un
+                        tag sopra un alarme ti faceva vedere tutte e due( il problema era che si mone ha cambiato la
+                        dimensione dei tag ma non delle ancore)<br>
                     </td>
                     <td md-cell>15/07/2019</td>
+                </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.7.2 - BUG FIX</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Solved the problem for which the tag icons was not displayed if only mandown alarm was on and another tag offline<br>
+                    </td>
+                    <td md-cell>24/04/2020</td>
+                </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.7.3 - BUG FIX</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Solved the 'map in middle of the ocean'. Solved the home page with only background (controler does not load). Solved some icon visualization problem in legend. Added the label for offline tags in legend<br>
+                    </td>
+                    <td md-cell>24/04/2020</td>
                 </tr>
                 </tbody>
             </table>
