--- a/components/home.html
+++ b/components/home.html
@@ -163,6 +163,9 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="text-center">
+                            <span class="color-orange font-smal">{{lang.version}} 3.7.3</span>
+                        </div>
                     </md-content>
                 </md-sidenav>
             </section>
