--- a/components/home.html
+++ b/components/home.html
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                         <div class="text-center">
-                            <span class="color-orange font-smal">{{lang.version}} 3.7.3</span>
+                            <span class="color-black font-smal">{{lang.version}} 3.8.1</span>
                         </div>
                     </md-content>
                 </md-sidenav>
