--- a/components/versions.html
+++ b/components/versions.html
@@ -241,7 +241,14 @@
                     <td md-cell>
                         <span class="color-green text-bold">Implemented the reload of the page if the home controller fails to be executed and Inserted the version of the software in the bottom part of the home menu<br>
                     </td>
-                    <td md-cell>24/04/2020</td>
+                    <td md-cell>31/05/2020</td>
+                </tr>
+                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.8.1 - BUG FIX</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Removed the hard-coded session name in webSocketServer<br>
+                    </td>
+                    <td md-cell>03/05/2020</td>
                 </tr>
                 </tbody>
             </table>
