V 3.9.0 UPDATES - Implememtatp l'aggiornamento automatico con versione su database - Messo log socket chiuso o errore

--- a/components/home.html
+++ b/components/home.html
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                         <div class="text-center">
-                            <span class="color-black font-smal">{{lang.version}} 3.8.1</span>
+                            <span class="color-black font-smal">{{lang.version}} {{homeCtrl.updateVersion}} </span>
                         </div>
                     </md-content>
                 </md-sidenav>
