--- a/components/versions.html
+++ b/components/versions.html
@@ -243,12 +243,26 @@
                     </td>
                     <td md-cell>31/05/2020</td>
                 </tr>
-                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.8.1 - BUG FIX</td>
                     <td md-cell>
                         <span class="color-green text-bold">Removed the hard-coded session name in webSocketServer<br>
                     </td>
                     <td md-cell>03/05/2020</td>
+                </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.8.2 - BUG FIX</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Risolto il problema del logo partner che non si vedeva in indoor<br>Risolto il problema delle ancore offline che non si vedevano indoor<br>
+                    </td>
+                    <td md-cell>10/06/2020</td>
+                </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.8.3 - UPDATES</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Implementato l'aggiornamento automatico<br>Messo la chiusura o l'errore del socket sul filelog php<br>
+                    </td>
+                    <td md-cell>10/06/2020</td>
                 </tr>
                 </tbody>
             </table>
