--- a/components/versions.html
+++ b/components/versions.html
@@ -258,11 +258,18 @@
                     <td md-cell>10/06/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
-                    <td class="color-orange" md-cell>V 3.8.3 - UPDATES</td>
+                    <td class="color-orange" md-cell>V 3.9.0 - UPDATES</td>
                     <td md-cell>
                         <span class="color-green text-bold">Implementato l'aggiornamento automatico<br>Messo la chiusura o l'errore del socket sul filelog php<br>
                     </td>
                     <td md-cell>10/06/2020</td>
+                </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.10.0 - UPDATES</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Implementata l'interfaccia grafica per l'aggiornamento dell versione<br>
+                    </td>
+                    <td md-cell>11/06/2020</td>
                 </tr>
                 </tbody>
             </table>
@@ -270,3 +277,4 @@
     </div>
 </md-content>
 <!--end popup content-->
+mplementata l'interfaccia grafica per l'aggiornamento dell versione
