--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -48,6 +48,7 @@
                     <th md-column md-order-by="type_name" ng-if="exists('battery', columns)"><span
                             class="color-darkcyan">{{lang.batteryLevel | uppercase}}</span></th>
                     <th md-column ng-if="isAdmin && exists('macs', columns)"></th>
+                    <th md-column ng-if="isAdmin && exists('rfids', columns)"></th>
                     <th md-column ng-if="isAdmin && exists('zones', columns)"></th>
                     <th md-column ng-if="isAdmin && exists('parameters', columns)"></th>
                     <th md-column ng-if="isAdmin && exists('callme', columns)"></th>
@@ -81,11 +82,18 @@
                                                                         title="{{lang.batteryLevel}}">
                         <span class="padding-left-5-px"><b>{{tag.battery_level}}</b>%/<b>{{tag.temperature}}</b>°C</span>
                     </td>
-                    <td md-cell ng-show="isAdmin" class="padding-right-10-px">
+                    <td md-cell ng-show="isAdmin" ng-if="exists('macs', columns) "class="padding-right-10-px">
                         <md-button ng-click="tagMacs(tag)"
                                    class="md-raised background-gray color-darkcyan margin-top-5-px"
                                    ng-if="exists('macs', columns)">
                             {{lang.macsManaging | uppercase}}
+                        </md-button>
+                    </td>
+                    <td md-cell ng-show="isAdmin" ng-if="exists('rfids', columns)" class="padding-right-10-px">
+                        <md-button ng-click="manageRfid(tag)"
+                                   class="md-raised background-gray color-darkcyan margin-top-5-px"
+                                   ng-if="exists('rfids', columns)">
+                            {{lang.manageRfid | uppercase}}
                         </md-button>
                     </td>
                     <td class="padding-right-10-px" md-cell ng-if="exists('zones', columns)" ng-show="(isAdmin)">
