--- a/components/versions.html
+++ b/components/versions.html
@@ -271,6 +271,13 @@
                     </td>
                     <td md-cell>11/06/2020</td>
                 </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.11.0 - Impementazione RFID</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Implementata la possibilita di scegliere un rfid per ogni tag<br>Adesso solo l'amministratore poo vedere le versioni
+                    </td>
+                    <td md-cell>20/06/2020</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
